feat: split statistics endpoint into multiple and add new aggregation to count the number of consumed events within a given timeframe
